--- a/src/components/main/body/subBody/SubBody.css
+++ b/src/components/main/body/subBody/SubBody.css
@@ -17,10 +17,6 @@
     padding: 10px;
 }
 
-.subBodyPostNotice :first-child {
-    border-top: 1px solid grey;
-}
-
 .subBodyPostTitle > h3 {
     margin-left: 20px;
 }
@@ -111,8 +107,11 @@
 }
 
 .postSubBodyContent {
-    font-size: 23px;
+    font-size: 1rem;
+    font-weight: bold;
     margin-left: 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
 }
 
 .postSubBodyBottomRow {
@@ -140,6 +139,7 @@
     justify-content: space-around;
     align-items: center;
     margin-bottom: 100px;
+    margin-top: 10px;
 }
 
 .subBodyPaiginationLeft,
@@ -147,6 +147,15 @@
     align-items: center;
     justify-content: center;
     display: flex;
+}
+
+.subBodyPaiginationLeft > span {
+    color:lightgrey;
+    margin-left: 5px;
+}
+
+.subBodyPaiginationRight > span {
+    margin-right: 5px;
 }
 
 .subBodyPaiginationMiddle {
