Yong ju lee/fe main with sub page 2 (#50)
* Update issue templates

* Update issue templates

* Create eslint.yml

* Hansung/add eslint (#19)

* Updated .gitignore file

* Add eslint file.

---------

Co-authored-by: Han kyung Sung <hankyungsung@Hans-MacBook-Pro.local>

* Hansung/add eslint (#20)

* Updated .gitignore file

* Add eslint file.

* installed more packages for eslint

---------

Co-authored-by: Han kyung Sung <hankyungsung@Hans-MacBook-Pro.local>

* Hansung/add eslint (#21)

* Updated .gitignore file

* Add eslint file.

* installed more packages for eslint

* Update package.json command and pipeline.

---------

Co-authored-by: Han kyung Sung <hankyungsung@Hans-MacBook-Pro.local>

* Hansung/fix eslint (#22)

* Updated the eslint rule.

* Fixed the eslint

---------

Co-authored-by: Han kyung Sung <hankyungsung@Hans-MacBook-Pro.local>

* Hansung/remove eslint (#39) (#40)

* Update issue templates

* Update issue templates

* Create eslint.yml

* Hansung/add eslint (#19)

* Updated .gitignore file

* Add eslint file.

---------



* Hansung/add eslint (#20)

* Updated .gitignore file

* Add eslint file.

* installed more packages for eslint

---------



* Hansung/add eslint (#21)

* Updated .gitignore file

* Add eslint file.

* installed more packages for eslint

* Update package.json command and pipeline.

---------



* Hansung/fix eslint (#22)

* Updated the eslint rule.

* Fixed the eslint

---------



* Delete .github/workflows/eslint.yml

---------

Co-authored-by: Han kyung Sung <hankyungsung@Hans-MacBook-Pro.local>

* Delete .github/workflows/eslint.yml

* added folder and files(user story 1)

* changed file name lowcase to uppercase. Added package(@maintine/core, @tabler/icons-react, @matine/hooks). Created header(added company logo, switch, buttons, test links)

* added package(@mantine/core,@mantine/hooks, @tabler/icons-reac

--- a/src/components/main/header/Header.css
+++ b/src/components/main/header/Header.css
@@ -15,7 +15,16 @@
     font-size: 16px;
 }
 
-.headerTitle > span {
+.headerTitle > a {
+    text-decoration: none;
+    color: black;
+}
+
+.headerTitle > a:hover {
+    color: #00BFFF;
+}
+
+.headerTextLink {
     padding: 10px;
     margin-left: 0.5vw;
     margin-right: 0.8vw;
@@ -31,7 +40,7 @@
     margin-right: 0.5vw;
 }
 
-.logIn, .signUp {
+.logIn , .signUp {
     width: 85px;
     height: 35px;
     border-radius: 15px;
@@ -48,5 +57,5 @@
 .signUp {
     background-color: #00BFFF;
     color: white;
-    border-color: #00BFFF;
+    border-color:#00BFFF;
 }
